## automake Makefile for libgui
## Process this file with automake to produce Makefile.in.

AUTOMAKE_OPTIONS = 1.11.6 gnits no-dependencies no-dist dejagnu
## "cygnus" == "foreign no-dist" (we hardened from foreign to gnits though)
AUTOMAKE_DEPRECATED_OPTIONS = cygnus
TEXINFO_TEX = ../texinfo/texinfo.tex
SUBDIRS = library src
